Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98506

QImageCapture not functioning properly on boot2qt embedded device

    XMLWordPrintable

Details

    • Linux/Other display system
    • f27ba7f87 (dev), 48365df87 (6.4), ba01d8928 (6.5)
    • 2022 wk 40-41 Embedded, 2022 wk 42-43 Embedded, Embedded wk44-45 2022, Embedded wk48-49 2022, Embedded wk50-51 2022

    Description

      QImageCapture has several issues on Toradex iMX6 devices.

       

      1) setResolution has no effect on the image captured. Setting the resolution and checking the return method give the resolution supplied, but when actually capturing an image it uses the camera default resolutions.

      According to the customer, setResolution functions properly when using gstreamer gst-launch utility on the Qt provided iMX OS image

       

      2) Strange log outputs of Pipeline # # and Camera # # after starting the camera.

      Attached is sample code and two console log files, Test_Log.txt is suppled by customer and Test_Log2.txt is output from testing the code on a Colibri iMX6.

       

      Attachments

        1. main.cpp
          3 kB
        2. Test_Log.txt
          2 kB
        3. Test_Log2.txt
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            arpa Ari Parkkila
            kevin.zhang Kevin Zhang
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes