Handle resolution change in QGstreamerImageCapture

Add filter element in gstreamer queue and update size of
captured image when image settings are changed.

Task-number: QTBUG-98506
Change-Id: I87d8ed20cf5326f9f5db76626e476499a2e1d491
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit f27ba7f8759db070525ef4cbaae757a34d80a306)